--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 
 <style>
-/* RESET & BASE -------------------------------------------------- */
+/* BASE ---------------------------------------------------------- */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow-y:scroll;-webkit-overflow-scrolling:touch;user-select:none}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradient(135deg,#0d0e1a,#1a1c2d);overflow-y:auto;-webkit-overflow-scrolling:touch;user-select:none}
 
 /* INTRO --------------------------------------------------------- */
-.intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.05rem;text-align:center;border-radius:28px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2s ease 1s forwards}
+.intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.04rem;text-align:center;border-radius:26px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2s ease 1s forwards}
 .intro .hl{color:#30ffe4;font-weight:800}
 @keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-72%)}}
 
@@ -22,24 +22,26 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
 /* BLOCK --------------------------------------------------------- */
-.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.1rem;font-weight:bold;position:relative;cursor:pointer;background-size:300% 300%;box-shadow:0 12px 30px rgba(0,0,0,.45);border:2px solid rgba(255,255,255,.08);overflow:hidden}
+.block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.05rem;font-weight:700;letter-spacing:.3px;position:relative;cursor:pointer;background-size:350% 350%;box-shadow:0 12px 30px rgba(0,0,0,.45);overflow:hidden;transition:background-position 3s ease}
+.block:hover{background-position:100% 100%}
+.block::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:0 0 0 3px hsla(0,0%,100%,.14) inset;transition:box-shadow .4s ease}
+.block:hover::after{box-shadow:0 0 0 3px hsla(0,0%,100%,.28) inset}
+
+/* LABEL & FRASE ------------------------------------------------- */
 .label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
 .frase,.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;text-align:center;padding:1rem;font-family:'Poppins',sans-serif;font-size:1rem}
 
-/* portada IMG --------------------------------------------------- */
+/* PORTADA IMG --------------------------------------------------- */
 .portada img{max-width:88%;max-height:88%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55);animation:fadeIn .8s ease forwards}
 
-/* portada TEXT (minimal) --------------------------------------- */
+/* PORTADA TEXT -------------------------------------------------- */
 .port-text{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:.6rem;animation:fadeIn .8s ease forwards}
 .port-text h2{font-size:clamp(1.9rem,4.7vw,3.2rem);font-weight:800;line-height:1.1;text-align:center}
-.port-text p{font-size:clamp(.9rem,2vw,1.25rem);font-weight:600;opacity:.9}
-
-/* fadeIn anim */
-@keyframes fadeIn{from{opacity:0;transform:scale(.94)}to{opacity:1;transform:scale(1)}}
+.port-text p{font-size:clamp(.9rem,2vw,1.25rem);font-weight:600;opacity:.92}
 
 /* CTA ----------------------------------------------------------- */
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1.2rem;z-index:10}
-.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:bold;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:150px}
+.cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer;box-shadow:0 4px 14px rgba(0,0,0,.3);transition:.2s;min-width:150px}
 .cta button:hover{transform:scale(1.06);box-shadow:0 8px 24px rgba(0,0,0,.38)}
 #otro{background:linear-gradient(135deg,#ff9a9e,#fad0c4);color:#000}
 #fisico{background:linear-gradient(135deg,#a1ffce,#faffd1);color:#000}
@@ -47,77 +49,90 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 /* CELEBRACIÓN --------------------------------------------------- */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:20;animation:fadeOut .3s ease 2.3s forwards}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
-.cele-msg{font-size:2.2rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.4rem 3.2rem;border-radius:20px;box-shadow:0 0 70px rgba(255,255,255,.12)}
-.num{color:#00ffc3;font-weight:900;font-size:3.4rem;letter-spacing:-1px}
+.cele-msg{font-size:2.15rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.3rem 3rem;border-radius:20px;box-shadow:0 0 70px rgba(255,255,255,.12)}
+.num{color:#00ffc3;font-weight:900;font-size:3.3rem;letter-spacing:-1px}
+
+/* ANIM ----------------------------------------------------------- */
+@keyframes fadeIn{from{opacity:0;transform:scale(.94)}to{opacity:1;transform:scale(1)}}
 </style>
 </head>
 <body>
 
-<div class="intro"><span class="hl">Respira</span>. Elige una palabra. <span class="hl">En uno de los bloques aparecerá un libro</span>.</div>
+<div class="intro"><span class="hl">¿Qué</span>sientes?<span class="hl">En uno de los bloques aparecerá un libro</span>.</div>
 
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
-  <button id="otro">🎲 Otro digital</button>
+  <button id="otro">🎲 Dame otro digital</button>
   <button id="fisico">📖 Abrí uno físico</button>
 </div>
 
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* Helpers ------------------------------------------------------- */
+/* ----------- helpers ---------- */
 const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
       btnOtro=document.getElementById("otro"),btnLibro=document.getElementById("fisico"),
       cele=document.getElementById("cele"),celeMsg=document.getElementById("celeMsg");
-let libro=null,portadaIdx=0,revelado=false;
-const emojis=["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+
+let libro=null,portIdx=0,revelado=false;
+
+/* Emojis por dimensión ------------------------------------------ */
+const EMOJI_MAP={
+  Bienestar:["🌱","🌀","💪","🧘"],
+  Prosperidad:["💰","🚀","📈","💎"],
+  Conexión:["🤝","💖","🔗","🌟"]
+};
+const fallbackEmoji=["🌊","🛡️","🧠","📘"];
+
+/* helpers */
 const isURL=s=>/^https?:\/\//i.test((s||"").trim());
 const grad=hex=>{
-  const r=parseInt(hex.slice(1,3),16),g=parseInt(hex.slice(3,5),16),b=parseInt(hex.slice(5,7),16);
+  const r=parseInt(hex.substr(1,2),16),g=parseInt(hex.substr(3,2),16),b=parseInt(hex.substr(5,2),16);
   const l=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;
   return`linear-gradient(135deg,${hex},${l})`;
 };
 
-/* Crear portada ------------------------------------------------- */
-function crearPortada(){
-  const cont=document.createElement("div");cont.className="portada";
+/* Portada creadora --------------------------------------------- */
+function makePortada(){
+  const wrap=document.createElement("div");wrap.className="portada";
   if(isURL(libro.portada)){
-    const img=new Image();img.src=libro.portada;cont.append(img);
+    const img=new Image();img.src=libro.portada;wrap.append(img);
   }else{
     const box=document.createElement("div");box.className="port-text";
     const h2=document.createElement("h2");h2.textContent=libro.portada.split('\n')[0];
     const p=document.createElement("p");p.textContent=libro.portada.split('\n').slice(1).join(' ');
-    box.append(h2,p);cont.append(box);
+    box.append(h2,p);wrap.append(box);
   }
-  return cont;
+  return wrap;
 }
 
-/* Render UI ----------------------------------------------------- */
+/* Render -------------------------------------------------------- */
 function render(){
   grid.innerHTML="";
+  const emojiSet=EMOJI_MAP[libro.dimension]||fallbackEmoji;
   libro.palabras.forEach((pal,i)=>{
     const blk=document.createElement("div");blk.className="block";blk.dataset.i=i;blk.style.background=grad(libro.colores[i]);
-    const label=document.createElement("div");label.className="label";label.textContent=`${emojis[i]} ${pal}`;label.style.color=libro.textColors[i];
+    blk.style.setProperty('--border-color',libro.colores[i]);
+    const label=document.createElement("div");label.className="label";label.textContent=`${emojiSet[i%emojiSet.length]} ${pal}`;label.style.color=libro.textColors[i];
     const frase=document.createElement("div");frase.className="frase";frase.textContent=libro.frases[i];frase.style.color=libro.textColors[i];
-    const portada=crearPortada();
-    blk.append(label,frase,portada);blk.onclick=()=>clicBloque(blk);
+    const port=makePortada();
+    blk.append(label,frase,port);blk.onclick=()=>clickBlk(blk);
     grid.append(blk);
   });
 }
 
-/* Click --------------------------------------------------------- */
-function clicBloque(blk){
-  const idx=+blk.dataset.i;const [lab,frase,port]=blk.children;
-  if(revelado&&idx!==portadaIdx)return location.reload();
-  if(!revelado&&idx===portadaIdx){
+function clickBlk(blk){
+  const i=+blk.dataset.i;const [lab,fr,port]=blk.children;
+  if(revelado&&i!==portIdx)return location.reload();
+  if(!revelado&&i===portIdx){
     blk.innerHTML="";blk.append(port);port.style.display="flex";
-    [...grid.children].forEach((b,j)=>{if(j!==idx){b.children[0].style.display="none";b.children[1].style.display="flex";}});
+    [...grid.children].forEach((b,j)=>{if(j!==i){b.children[0].style.display="none";b.children[1].style.display="flex";}});
     cta.style.display="flex";revelado=true;
-  }else if(!revelado){
-    lab.style.display="none";frase.style.display="flex";
-  }
+  }else if(!revelado){lab.style.display="none";fr.style.display="flex";}
 }
 
+/* Botones ------------------------------------------------------- */
 btnOtro.onclick=()=>location.reload();
 
 btnLibro.onclick=async()=>{
@@ -136,7 +151,7 @@ btnLibro.onclick=async()=>{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
     const data=await r.json();
     libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    portadaIdx=Math.floor(Math.random()*4);
+    portIdx=Math.floor(Math.random()*4);
     render();
   }catch(e){console.error("Error cargando contenido:",e);}
 })();
