--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 /* INTRO --------------------------------------------------------- */
 .intro{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);padding:2rem 3rem;background:linear-gradient(135deg,#191e32,#0e1325);color:#fff;font-family:'Poppins',sans-serif;font-size:1.04rem;text-align:center;border-radius:26px;box-shadow:0 0 16px rgba(48,255,228,.3);z-index:50;animation:fadeOutIntro 2s ease 1s forwards}
 .intro .hl{color:#30ffe4;font-weight:800}
-@keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-72%)}}
+@keyframes fadeOutIntro{to{opacity:0;visibility:hidden;transform:translate(-50%,-74%)}}
 
 /* GRID ---------------------------------------------------------- */
 .grid{position:absolute;top:5vh;bottom:5vh;left:1.5vw;right:1.5vw;display:grid;gap:1vw}
@@ -24,8 +24,8 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 /* BLOCK --------------------------------------------------------- */
 .block{border-radius:22px;display:flex;align-items:center;justify-content:center;text-align:center;font-size:1.05rem;font-weight:700;letter-spacing:.3px;position:relative;cursor:pointer;background-size:350% 350%;box-shadow:0 12px 30px rgba(0,0,0,.45);overflow:hidden;transition:background-position 3s ease}
 .block:hover{background-position:100% 100%}
-.block::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:0 0 0 3px hsla(0,0%,100%,.14) inset;transition:box-shadow .4s ease}
-.block:hover::after{box-shadow:0 0 0 3px hsla(0,0%,100%,.28) inset}
+.block::after{content:"";position:absolute;inset:0;border-radius:inherit;pointer-events:none;box-shadow:inset 0 0 0 3px hsla(0,0%,100%,.14);transition:box-shadow .4s ease}
+.block:hover::after{box-shadow:inset 0 0 0 3px hsla(0,0%,100%,.25)}
 
 /* LABEL & FRASE ------------------------------------------------- */
 .label{display:flex;align-items:center;justify-content:center;height:100%;width:100%;padding:1rem}
@@ -35,9 +35,15 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 .portada img{max-width:88%;max-height:88%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55);animation:fadeIn .8s ease forwards}
 
 /* PORTADA TEXT -------------------------------------------------- */
-.port-text{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:.6rem;animation:fadeIn .8s ease forwards}
-.port-text h2{font-size:clamp(1.9rem,4.7vw,3.2rem);font-weight:800;line-height:1.1;text-align:center}
-.port-text p{font-size:clamp(.9rem,2vw,1.25rem);font-weight:600;opacity:.92}
+.port-text{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:.65rem;padding:2rem 1rem;animation:fadeIn .8s ease forwards}
+.port-text::before{content:"";position:absolute;inset:-25%;background:radial-gradient(circle at center,rgba(255,255,255,.12),transparent 70%);filter:blur(20px);z-index:-1}
+.icon-big{font-size:clamp(3rem,6vw,4.4rem);opacity:.8;animation:float 6s ease-in-out infinite}
+@keyframes float{0%,100%{transform:translateY(-4%)}50%{transform:translateY(4%)}}
+.port-title{font-size:clamp(2rem,5vw,3.4rem);font-weight:800;line-height:1.1;text-align:center;background-clip:text;-webkit-background-clip:text;color:transparent}
+.port-author{font-size:clamp(.95rem,2.1vw,1.3rem);font-weight:600;opacity:.92}
+
+/* FADE ANIM */
+@keyframes fadeIn{from{opacity:0;transform:scale(.94)}to{opacity:1;transform:scale(1)}}
 
 /* CTA ----------------------------------------------------------- */
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1.2rem;z-index:10}
@@ -51,109 +57,102 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:linear-gradien
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
 .cele-msg{font-size:2.15rem;color:#fff;text-align:center;font-family:'Poppins',sans-serif;background:rgba(255,255,255,.05);padding:2.3rem 3rem;border-radius:20px;box-shadow:0 0 70px rgba(255,255,255,.12)}
 .num{color:#00ffc3;font-weight:900;font-size:3.3rem;letter-spacing:-1px}
-
-/* ANIM ----------------------------------------------------------- */
-@keyframes fadeIn{from{opacity:0;transform:scale(.94)}to{opacity:1;transform:scale(1)}}
 </style>
 </head>
 <body>
 
-<div class="intro"><span class="hl">¿Qué</span> <span class="hl">sientes?</span></div>
+<div class="intro"><span class="hl">Respira</span>. Elige una palabra. <span class="hl">En uno de los bloques aparecerá un libro</span>.</div>
 
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
-  <button id="otro">🎲 Dame otro digital</button>
+  <button id="otro">🎲 Otro digital</button>
   <button id="fisico">📖 Abrí uno físico</button>
 </div>
 
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* ----------- helpers ---------- */
 const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
       btnOtro=document.getElementById("otro"),btnLibro=document.getElementById("fisico"),
       cele=document.getElementById("cele"),celeMsg=document.getElementById("celeMsg");
 
-let libro=null,portIdx=0,revelado=false;
+let libro=null,portIndex=0,revelado=false;
 
-/* Emojis por dimensión ------------------------------------------ */
-const EMOJI_MAP={
+/* Emojis -------------------------------------------------------- */
+const EMO_LABEL={
   Bienestar:["🌱","🌀","💪","🧘"],
   Prosperidad:["💰","🚀","📈","💎"],
   Conexión:["🤝","💖","🔗","🌟"]
 };
-const fallbackEmoji=["🌊","🛡️","🧠","📘"];
-
-/* helpers */
-const isURL=s=>/^https?:\/\//i.test((s||"").trim());
-const grad=hex=>{
-  const r=parseInt(hex.substr(1,2),16),g=parseInt(hex.substr(3,2),16),b=parseInt(hex.substr(5,2),16);
-  const l=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;
-  return`linear-gradient(135deg,${hex},${l})`;
+const BIG_ICON={
+  Bienestar:"💚",
+  Prosperidad:"💎",
+  Conexión:"✨"
 };
+const fallbackLabel=["🌊","🛡️","🧠","📘"];
+const fallbackBig="📚";
+const isURL=s=>/^https?:\/\//i.test((s||"").trim());
+const grad=hex=>{const r=parseInt(hex.substr(1,2),16),g=parseInt(hex.substr(3,2),16),b=parseInt(hex.substr(5,2),16);
+  const light=`rgba(${Math.min(r+60,255)},${Math.min(g+60,255)},${Math.min(b+60,255)},0.85)`;return`linear-gradient(135deg,${hex},${light})`;};
 
-/* Portada creadora --------------------------------------------- */
 function makePortada(){
   const wrap=document.createElement("div");wrap.className="portada";
   if(isURL(libro.portada)){
     const img=new Image();img.src=libro.portada;wrap.append(img);
   }else{
     const box=document.createElement("div");box.className="port-text";
-    const h2=document.createElement("h2");h2.textContent=libro.portada.split('\n')[0];
-    const p=document.createElement("p");p.textContent=libro.portada.split('\n').slice(1).join(' ');
-    box.append(h2,p);wrap.append(box);
+    const icon=document.createElement("div");icon.className="icon-big";icon.textContent=BIG_ICON[libro.dimension]||fallbackBig;
+    const title=document.createElement("div");title.className="port-title";title.textContent=libro.portada.split('\n')[0];
+    const author=document.createElement("div");author.className="port-author";author.textContent=libro.portada.split('\n').slice(1).join(' ');
+    /* gradiente para texto */
+    const g=`linear-gradient(135deg,${libro.colores[0]},${libro.colores[1]||libro.colores[0]})`;
+    title.style.backgroundImage=g;
+    box.append(icon,title,author);wrap.append(box);
   }
   return wrap;
 }
 
-/* Render -------------------------------------------------------- */
 function render(){
   grid.innerHTML="";
-  const emojiSet=EMOJI_MAP[libro.dimension]||fallbackEmoji;
-  libro.palabras.forEach((pal,i)=>{
-    const blk=document.createElement("div");blk.className="block";blk.dataset.i=i;blk.style.background=grad(libro.colores[i]);
-    blk.style.setProperty('--border-color',libro.colores[i]);
-    const label=document.createElement("div");label.className="label";label.textContent=`${emojiSet[i%emojiSet.length]} ${pal}`;label.style.color=libro.textColors[i];
+  const set=EMO_LABEL[libro.dimension]||fallbackLabel;
+  libro.palabras.forEach((w,i)=>{
+    const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=grad(libro.colores[i]);
+    const label=document.createElement("div");label.className="label";label.textContent=`${set[i%set.length]} ${w}`;label.style.color=libro.textColors[i];
     const frase=document.createElement("div");frase.className="frase";frase.textContent=libro.frases[i];frase.style.color=libro.textColors[i];
     const port=makePortada();
-    blk.append(label,frase,port);blk.onclick=()=>clickBlk(blk);
-    grid.append(blk);
+    card.append(label,frase,port);card.onclick=()=>clickCard(card);
+    grid.append(card);
   });
 }
 
-function clickBlk(blk){
-  const i=+blk.dataset.i;const [lab,fr,port]=blk.children;
-  if(revelado&&i!==portIdx)return location.reload();
-  if(!revelado&&i===portIdx){
-    blk.innerHTML="";blk.append(port);port.style.display="flex";
-    [...grid.children].forEach((b,j)=>{if(j!==i){b.children[0].style.display="none";b.children[1].style.display="flex";}});
+function clickCard(card){
+  const i=+card.dataset.i;const [lab,fr,port]=card.children;
+  if(revelado&&i!==portIndex)return location.reload();
+  if(!revelado&&i===portIndex){
+    card.innerHTML="";card.append(port);port.style.display="flex";
+    [...grid.children].forEach((c,j)=>{if(j!==i){c.children[0].style.display="none";c.children[1].style.display="flex";}});
     cta.style.display="flex";revelado=true;
   }else if(!revelado){lab.style.display="none";fr.style.display="flex";}
 }
 
-/* Botones ------------------------------------------------------- */
 btnOtro.onclick=()=>location.reload();
 
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
-  try{
-    const r=await fetch("https://triggui-api.vercel.app/api/increment");
-    const d=await r.json();
-    celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
+  try{const res=await fetch("https://triggui-api.vercel.app/api/increment");const d=await res.json();
+      celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
   }catch{celeMsg.textContent="📚 Error al contar libros";}
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
 };
 
-/* Init ---------------------------------------------------------- */
 (async()=>{
   try{
-    const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
-    const data=await r.json();
-    libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-    portIdx=Math.floor(Math.random()*4);
+    const res=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
+    libro=(await res.json()).libros[Math.floor(Math.random()*10)];
+    portIndex=Math.floor(Math.random()*4);
     render();
-  }catch(e){console.error("Error cargando contenido:",e);}
+  }catch(e){console.error("Error:",e);}
 })();
 </script>
 </body>
